seaqt/QtWidgets/gen_qtablewidget.h

typedef struct QBrush QBrush;
typedef struct QDataStream QDataStream;
typedef struct QFont QFont;
typedef struct QIcon QIcon;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QSize QSize;
typedef struct QTableWidget QTableWidget;
typedef struct QTableWidgetItem QTableWidgetItem;
typedef struct QTableWidgetSelectionRange QTableWidgetSelectionRange;
typedef struct QVariant QVariant;
QTableWidgetSelectionRange* QTableWidgetSelectionRange_new();
QTableWidgetSelectionRange* QTableWidgetSelectionRange_new2(int top, int left, int bottom, int right);
int QTableWidgetSelectionRange_topRow(const QTableWidgetSelectionRange* self);
int QTableWidgetSelectionRange_bottomRow(const QTableWidgetSelectionRange* self);
int QTableWidgetSelectionRange_leftColumn(const QTableWidgetSelectionRange* self);
int QTableWidgetSelectionRange_rightColumn(const QTableWidgetSelectionRange* self);
int QTableWidgetSelectionRange_rowCount(const QTableWidgetSelectionRange* self);
int QTableWidgetSelectionRange_columnCount(const QTableWidgetSelectionRange* self);
typedef struct VirtualQTableWidgetItem VirtualQTableWidgetItem;
typedef struct QTableWidgetItem_VTable{
	void (*destructor)(VirtualQTableWidgetItem* self);
	QTableWidgetItem* (*clone)(const VirtualQTableWidgetItem* self);
	QVariant* (*data)(const VirtualQTableWidgetItem* self, int role);
	void (*setData)(VirtualQTableWidgetItem* self, int role, QVariant* value);
	bool (*operatorLesser)(const VirtualQTableWidgetItem* self, QTableWidgetItem* other);
	void (*read)(VirtualQTableWidgetItem* self, QDataStream* in);
	void (*write)(const VirtualQTableWidgetItem* self, QDataStream* out);
}QTableWidgetItem_VTable;
const QTableWidgetItem_VTable* QTableWidgetItem_vtbl(const VirtualQTableWidgetItem* self);
void* QTableWidgetItem_vdata(const VirtualQTableWidgetItem* self);
VirtualQTableWidgetItem* QTableWidgetItem_new(const QTableWidgetItem_VTable* vtbl, void* vdata);
VirtualQTableWidgetItem* QTableWidgetItem_new2(const QTableWidgetItem_VTable* vtbl, void* vdata, struct miqt_string text);
VirtualQTableWidgetItem* QTableWidgetItem_new3(const QTableWidgetItem_VTable* vtbl, void* vdata, QIcon* icon, struct miqt_string text);
VirtualQTableWidgetItem* QTableWidgetItem_new4(const QTableWidgetItem_VTable* vtbl, void* vdata, QTableWidgetItem* other);
VirtualQTableWidgetItem* QTableWidgetItem_new5(const QTableWidgetItem_VTable* vtbl, void* vdata, int type);
VirtualQTableWidgetItem* QTableWidgetItem_new6(const QTableWidgetItem_VTable* vtbl, void* vdata, struct miqt_string text, int type);
VirtualQTableWidgetItem* QTableWidgetItem_new7(const QTableWidgetItem_VTable* vtbl, void* vdata, QIcon* icon, struct miqt_string text, int type);
QTableWidgetItem* QTableWidgetItem_clone(const QTableWidgetItem* self);
QTableWidget* QTableWidgetItem_tableWidget(const QTableWidgetItem* self);
int QTableWidgetItem_row(const QTableWidgetItem* self);
int QTableWidgetItem_column(const QTableWidgetItem* self);
void QTableWidgetItem_setSelected(QTableWidgetItem* self, bool select);
bool QTableWidgetItem_isSelected(const QTableWidgetItem* self);
int QTableWidgetItem_flags(const QTableWidgetItem* self);
void QTableWidgetItem_setFlags(QTableWidgetItem* self, int flags);
struct miqt_string QTableWidgetItem_text(const QTableWidgetItem* self);
void QTableWidgetItem_setText(QTableWidgetItem* self, struct miqt_string text);
QIcon* QTableWidgetItem_icon(const QTableWidgetItem* self);
void QTableWidgetItem_setIcon(QTableWidgetItem* self, QIcon* icon);
struct miqt_string QTableWidgetItem_statusTip(const QTableWidgetItem* self);
void QTableWidgetItem_setStatusTip(QTableWidgetItem* self, struct miqt_string statusTip);
struct miqt_string QTableWidgetItem_toolTip(const QTableWidgetItem* self);
void QTableWidgetItem_setToolTip(QTableWidgetItem* self, struct miqt_string toolTip);
struct miqt_string QTableWidgetItem_whatsThis(const QTableWidgetItem* self);
void QTableWidgetItem_setWhatsThis(QTableWidgetItem* self, struct miqt_string whatsThis);
QFont* QTableWidgetItem_font(const QTableWidgetItem* self);
void QTableWidgetItem_setFont(QTableWidgetItem* self, QFont* font);
int QTableWidgetItem_textAlignment(const QTableWidgetItem* self);
void QTableWidgetItem_setTextAlignment(QTableWidgetItem* self, int alignment);
void QTableWidgetItem_setTextAlignmentWithAlignment(QTableWidgetItem* self, int alignment);
void QTableWidgetItem_setTextAlignment2(QTableWidgetItem* self, int alignment);
QBrush* QTableWidgetItem_background(const QTableWidgetItem* self);
void QTableWidgetItem_setBackground(QTableWidgetItem* self, QBrush* brush);
QBrush* QTableWidgetItem_foreground(const QTableWidgetItem* self);
void QTableWidgetItem_setForeground(QTableWidgetItem* self, QBrush* brush);
int QTableWidgetItem_checkState(const QTableWidgetItem* self);
void QTableWidgetItem_setCheckState(QTableWidgetItem* self, int state);
QSize* QTableWidgetItem_sizeHint(const QTableWidgetItem* self);
void QTableWidgetItem_setSizeHint(QTableWidgetItem* self, QSize* size);
QVariant* QTableWidgetItem_data(const QTableWidgetItem* self, int role);
void QTableWidgetItem_setData(QTableWidgetItem* self, int role, QVariant* value);
bool QTableWidgetItem_operatorLesser(const QTableWidgetItem* self, QTableWidgetItem* other);
void QTableWidgetItem_read(QTableWidgetItem* self, QDataStream* in);
void QTableWidgetItem_write(const QTableWidgetItem* self, QDataStream* out);
void QTableWidgetItem_operatorAssign(QTableWidgetItem* self, QTableWidgetItem* other);
int QTableWidgetItem_type(const QTableWidgetItem* self);
QTableWidgetItem* QTableWidgetItem_virtualbase_clone(const VirtualQTableWidgetItem* self);
QVariant* QTableWidgetItem_virtualbase_data(const VirtualQTableWidgetItem* self, int role);
void QTableWidgetItem_virtualbase_setData(VirtualQTableWidgetItem* self, int role, QVariant* value);
bool QTableWidgetItem_virtualbase_operatorLesser(const VirtualQTableWidgetItem* self, QTableWidgetItem* other);
void QTableWidgetItem_virtualbase_read(VirtualQTableWidgetItem* self, QDataStream* in);
void QTableWidgetItem_virtualbase_write(const VirtualQTableWidgetItem* self, QDataStream* out);
typedef struct VirtualQTableWidget VirtualQTableWidget;
QMetaObject* QTableWidget_metaObject(const QTableWidget* self);
void* QTableWidget_metacast(QTableWidget* self, const char* param1);
int QTableWidget_metacall(QTableWidget* self, int param1, int param2, void** param3);
struct miqt_string QTableWidget_tr(const char* s);
void QTableWidget_setRowCount(QTableWidget* self, int rows);
int QTableWidget_rowCount(const QTableWidget* self);
void QTableWidget_setColumnCount(QTableWidget* self, int columns);
int QTableWidget_columnCount(const QTableWidget* self);
int QTableWidget_row(const QTableWidget* self, QTableWidgetItem* item);
int QTableWidget_column(const QTableWidget* self, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_item(const QTableWidget* self, int row, int column);
void QTableWidget_setItem(QTableWidget* self, int row, int column, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_takeItem(QTableWidget* self, int row, int column);
struct miqt_array /* of QTableWidgetItem* */  QTableWidget_items(const QTableWidget* self, QMimeData* data);
QModelIndex* QTableWidget_indexFromItem(const QTableWidget* self, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_itemFromIndex(const QTableWidget* self, QModelIndex* index);
QTableWidgetItem* QTableWidget_verticalHeaderItem(const QTableWidget* self, int row);
void QTableWidget_setVerticalHeaderItem(QTableWidget* self, int row, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_takeVerticalHeaderItem(QTableWidget* self, int row);
QTableWidgetItem* QTableWidget_horizontalHeaderItem(const QTableWidget* self, int column);
void QTableWidget_setHorizontalHeaderItem(QTableWidget* self, int column, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_takeHorizontalHeaderItem(QTableWidget* self, int column);
void QTableWidget_setVerticalHeaderLabels(QTableWidget* self, struct miqt_array /* of struct miqt_string */  labels);
void QTableWidget_setHorizontalHeaderLabels(QTableWidget* self, struct miqt_array /* of struct miqt_string */  labels);
int QTableWidget_currentRow(const QTableWidget* self);
int QTableWidget_currentColumn(const QTableWidget* self);
QTableWidgetItem* QTableWidget_currentItem(const QTableWidget* self);
void QTableWidget_setCurrentItem(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_setCurrentItem2(QTableWidget* self, QTableWidgetItem* item, int command);
void QTableWidget_setCurrentCell(QTableWidget* self, int row, int column);
void QTableWidget_setCurrentCell2(QTableWidget* self, int row, int column, int command);
void QTableWidget_sortItems(QTableWidget* self, int column);
void QTableWidget_setSortingEnabled(QTableWidget* self, bool enable);
bool QTableWidget_isSortingEnabled(const QTableWidget* self);
void QTableWidget_editItem(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_openPersistentEditor(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemPressed(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemDoubleClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemActivated(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemEntered(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_currentItemChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemSelectionChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QTableWidget_connect_cellPressed(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_cellClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_cellDoubleClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_cellActivated(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_cellEntered(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_cellChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_currentCellChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int, int, int), void (*release)(intptr_t));